--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 </div>
 <hr>
 <div style="padding: 13px;">
-    <b>IR A UNA PAGINA ESPECIFICA (ITP)</b>
-    <p>Para ordenar la instrucción debemos decir <b>"Ir a la pagina del ITP"</b> ya que la 
-       palabra clave para que haga la funcion es <b>"ITP"</b>.</p>
+    <b>IR A UNA PAGINA ESPECIFICA (NETFLIX)</b>
+    <p>Para ordenar la instrucción debemos decir <b>"Ir a la pagina del Netflix"</b> ya que la 
+       palabra clave para que haga la funcion es <b>"NETFLIX"</b>.</p>
 </div>
 <hr>
 <div style="padding: 13px;">
